Committing straight from Android Studio

--- a/LittleLemon/app/src/main/res/values/strings.xml
+++ b/LittleLemon/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">LittleLemon</string>
+    <string name="LoggedIn">isLoggedIn</string>
+    <string name="FirstName">FirstName</string>
+    <string name="LastName">LastName</string>
+    <string name="Email">Email</string>
 </resources>
